# dcloud

./: .gitignore  Cargo.toml  Makefile  README.md  README_internal_details.md  README_local_demo_infra.md  TODO.md  init.py  init_cmd.sh  register.py  register_cmd.sh
dcloud-bastion-egress/: Cargo.toml
dcloud-bastion-egress/src/: main.rs
dcloud-bastion-ingress/: Cargo.toml
dcloud-bastion-ingress/src/: main.rs
dcloud-cli/: Cargo.toml
dcloud-cli/src/: main.rs
dcloud-operator/: Cargo.toml
deployment/istio/: vm-cluster.yaml  workloadgroup.yaml
deployment/kubernetes/applications/a/: deployment.yaml  service.yaml
deployment/kubernetes/applications/b/: deployment.yaml  service.yaml
deployment/kubernetes/applications/c/: deployment.yaml  service.yaml
deployment/kubernetes/applications/dcloud-proxy/: deployment.yaml  service.yaml
deployment/kubernetes/applications/test/: deployment.yaml  (+1 more)
deployment/kubernetes/dcloud/: bastion_deployment.yaml  bastion_service.yml  virtual_service.yaml
deployment/kubernetes/utils/: deployment.yaml
images/bastion/: Dockerfile
images/bastion-egress-proxy/: Dockerfile
images/bastion-ingress-proxy/: Dockerfile  docker-compose.yml  nginx.conf  requirements.txt
images/bastion-ingress-proxy/app/: run.py
images/v2_nginx/: Dockerfile  docker-compose.yml  nginx.conf
microservice/a/app/: run.py
microservice/b/app/: run.py
microservice/c/: Dockerfile  requirements.txt
microservice/c/app/: run.py
microservice/proxy/app/: run.py
scripts/: init.py  init_cmd.sh  istio_services_list.sh  register.py  register_cmd.sh
(+9 files in other folders)
