[package]
name = "dcloud-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.92.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
clap = { version = "4.5.7", features = ["derive"] }
tokio = { version = "1.0.0", features = ["full"] }
